--- a/bigbuttonapp/composer.json
+++ b/bigbuttonapp/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "BigButton\\App\\": ["test/"]
+            "BigButton\\App\\": ["spec/"]
         }
     }
 }
