--- a/bigbuttonapp/puphpet/config.yaml
+++ b/bigbuttonapp/puphpet/config.yaml
@@ -14,8 +14,8 @@ vagrantfile:
                     host: '5142'
                     guest: '22'
                 web:
-                    host: 80
-                    guest: 80
+                    host: '80'
+                    guest: '8011'
         post_up_message: ''
         provider:
             virtualbox:
