--- a/bigbuttonapp/composer.json
+++ b/bigbuttonapp/composer.json
@@ -7,7 +7,8 @@
         "guzzlehttp/guzzle": "~5.2",
         "esendex/sdk": "^1.0",
         "vivait/chronofy-php": "dev-master@dev",
-        "doctrine/common": "^2.5"
+        "doctrine/common": "^2.5",
+        "jwhennessey/phpinsight": "~2.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.2",
